# py-quotable

./: .gitignore  LICENSE.txt  pyproject.toml
quotable/: quotable.py  quotable_cli.py
